# python-sht4x

./: .cookiecutter.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.md  reference.md  usage.md
python_sht4x/: __init__.py  cli.py  python_sht4x.py
src/python_sht4x/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
