[tool.poetry]
name = "python-sht4x"
version = "0.1.0"
description = ""
authors = ["Christopher Johnson <chrisj.egr@gmail.com>"]
readme = "README.md"
packages = [{include = "python_sht4x"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
smbus2 = "^0.4.2"
crc = "^4.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
python-sht4x = "python_sht4x.cli:main"